[package]
name = "node-cardano-wallet"
version = "0.0.1"
authors = ["Crossroad Labs <info@crossroad.io>"]
license = "Apache-2.0"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "node_cardano_wallet"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.2.0"

[dependencies]
wallet-wasm = { git = "https://github.com/rooooooooob/js-cardano-wasm.git", branch = "testnet-address-gen" }
cardano = { git = "https://github.com/rooooooooob/js-cardano-wasm.git", branch = "testnet-address-gen" }
neon = "0.2.0"

[profile.release]
debug = false
lto = true
opt-level = 's'